set home page as default page and add home banner structure

--- a/src/app/components/home-banner/home-banner.component.html
+++ b/src/app/components/home-banner/home-banner.component.html
@@ -1,1 +1,15 @@
-<p>home-banner works!</p>
+<section class ="home-banner">
+  <div class="home-banner__content">
+    <div class="heading">
+        Hi, I'm Mamello
+        </div>
+    <div class ="intro-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eleifend molestie libero eu ornare. 
+        Sed gravida efficitur tortor molestie pharetra. Nunc blandit eu nisl nec bibendum.
+    </div>
+    <div class="social-links">
+        links goes here
+        <!-- TO DO: Add links -->
+    </div>
+</div>  
+</section>
