--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<div class="footer">
+    <p>Say Hello!</p>
+    <div class="footer__email">
+        hello@missmoshoeshoe.co.za 
+        <!-- TO DO: Add mailbox icon and on hover copy -->
+    </div>
+    <div class="footer__social-icons">
+        <!-- Add icons -->
+    </div>
+     <div class="footer__copyright">&copy; missmoshoeshoe 2022</div>
+</div>
