--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<app-home-banner></app-home-banner>
+<section class ="home-page">
+    <app-home-banner></app-home-banner>
+
+    <div class="home-page__projects">
+        
+    </div>
+</section>
