update home banner

--- a/src/app/components/home-banner/home-banner.component.html
+++ b/src/app/components/home-banner/home-banner.component.html
@@ -1,15 +1,22 @@
-<section class ="home-banner">
+<section class="home-banner">
   <div class="home-banner__content">
-    <div class="heading">
+    <div class="intro">
+      <div class="heading">
         Hi, I'm Mamello
-        </div>
-    <div class ="intro-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eleifend molestie libero eu ornare. 
-        Sed gravida efficitur tortor molestie pharetra. Nunc blandit eu nisl nec bibendum.
+      </div>
+      <div class="intro-text">
+        I'm a <span class="unique-text">Frontend Developer</span> & <span class="unique-text">UI Designer</span> based
+        in South Africa.
+        Passionate about <span class="unique-text">Problem Solving</span>,
+        <span class="unique-text"> Design </span>& <span class="unique-text">Code</span>.
+      </div>
+      <button class="intro-cta">View Work</button>
+      <div class="social-links">
+        <i class='fa fa-linkedin' style='color: blue'></i>
+        <i class='fa fa-behance'></i>
+      </div>
     </div>
-    <div class="social-links">
-        links goes here
-        <!-- TO DO: Add links -->
-    </div>
-</div>  
+    <div class="intro-image">
+      <img src="/assets/images/image6.png"></div>
+  </div>
 </section>
