structure product cards and add placeholders

--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,1 +1,16 @@
-<p>project-card works!</p>
+<section class="projects-cards">
+    <div class="projects-cards__title">Projects</div>
+    <div class="projects-cards__cards">
+      <div class="projects-cards__card" *ngFor="let item of cards">
+          <div class="project-image">
+            <img src= "{{item.imgUrl}}">
+          </div>
+          <div class="project-detail">
+             <div class="project-title"> {{item.title}} </div>
+             <div class="project-description">{{item.description}}</div>
+              </div>
+        </div>
+  
+    </div>
+  </section>
+  
