--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,6 +2,6 @@
     <app-home-banner></app-home-banner>
 
     <div class="home-page__projects">
-        
+        <app-project-card></app-project-card>
     </div>
 </section>
