--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,9 +1,8 @@
 .footer 
 {
-    background-color: black;
-    color: white;
+    color: black;
     width: 100%;
     text-align: center;
-    position: absolute;
-    bottom: 0;
+    // position: absolute;
+    // bottom: 0;
 }
