--- a/src/app/components/home-banner/home-banner.component.scss
+++ b/src/app/components/home-banner/home-banner.component.scss
@@ -7,6 +7,7 @@
   width: 100%;
   color: black;
   background-color: #fcfcfc;
+  background-size: cover;
 
   &__content {
     display: flex;
@@ -94,9 +95,9 @@
           height: 60vh;
         }
 
-        @media(min-width: 1440px) {
-          height: 120vh;
-        }
+        // @media(min-width: 1440px) {
+        //   height: 120vh;
+        // }
 
         @media(min-width: 2560px) {
           height: 80vh;
